del phone number and add mail in block contacts

--- a/src/html/sections/_contacts.html
+++ b/src/html/sections/_contacts.html
@@ -20,8 +20,8 @@
                     </li>
                     <li class="contacts__item">
                         <span>E-mail:</span>
-                        <a href="mailto:info@ruroditel.ru">
-                             info@ruroditel.ru
+                        <a href="mailto:ors@mpcenter.ru">
+                             ors@mpcenter.ru
                         </a>
                     </li>
                     <!-- <li class="contacts__item">
@@ -30,12 +30,12 @@
                             +7 (495) 380-30-67
                         </a>
                     </li> -->
-                    <li class="contacts__item">
+                    <!-- <li class="contacts__item">
                         <span>Пресс-центр:</span>
                         <a href="tel:+79264353337">
                             +7 (926) 435-33-37
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
